# snowmonkey

./: CMakeLists.txt  COPYING  LICENCE  LICENSE  Makefile.am  NEWS  README  README.md  actions.c  actions.h  autogen.sh  cli.c  cli.h  config.h.in  configure.ac  context.c  context.h  datafiles.c  datafiles.h  file.c  file.h  freedesktop.c  freedesktop.h  globals.h  main.c  plugins.c  plugins.h  string_utils.c  string_utils.h
man/: Makefile.am  snowmonkey.1.pod
src/: Makefile.am  action_extract.c  action_extract.h  action_list.c  action_list.h  actionenum.h  actions.c  actions.h  cli.c  cli.h  config.h.in  constants.h  context.c  context.h  datafiles.c  datafiles.h  file.c  file.h  freedesktop.c  freedesktop.h  globals.h  iconv_utils.c  iconv_utils.h  main.c  plugins.c  plugins.h  progress.c  progress.h  shift_jis_utils.c  shift_jis_utils.h  string_utils.c  version.h.in
